// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`reducers/log should add the messages to the existing messages 1`] = `
Object {
  "connected": false,
  "messages": Array [
    Array [
      "some messages",
    ],
  ],
}
`;

exports[`reducers/log should return the initial state 1`] = `
Object {
  "connected": false,
  "messages": Array [],
}
`;
